[gd_scene load_steps=53 format=2]

[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (5).png" type="Texture" id=1]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (5).png" type="Texture" id=2]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (7).png" type="Texture" id=3]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (6).png" type="Texture" id=4]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (10).png" type="Texture" id=5]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (4).png" type="Texture" id=6]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (11).png" type="Texture" id=7]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (7).png" type="Texture" id=8]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (13).png" type="Texture" id=9]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (15).png" type="Texture" id=10]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (6).png" type="Texture" id=11]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (12).png" type="Texture" id=12]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (4).png" type="Texture" id=13]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (5).png" type="Texture" id=14]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (7).png" type="Texture" id=15]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (8).png" type="Texture" id=16]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (9).png" type="Texture" id=17]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (2).png" type="Texture" id=18]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (8).png" type="Texture" id=19]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (1).png" type="Texture" id=20]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (3).png" type="Texture" id=21]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (2).png" type="Texture" id=22]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (3).png" type="Texture" id=23]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (11).png" type="Texture" id=24]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (12).png" type="Texture" id=25]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (6).png" type="Texture" id=26]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (1).png" type="Texture" id=27]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (2).png" type="Texture" id=28]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (14).png" type="Texture" id=29]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (2).png" type="Texture" id=30]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Attack (1).png" type="Texture" id=31]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (3).png" type="Texture" id=32]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (9).png" type="Texture" id=33]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (3).png" type="Texture" id=34]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (10).png" type="Texture" id=35]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (4).png" type="Texture" id=36]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Dead (1).png" type="Texture" id=37]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (5).png" type="Texture" id=38]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (4).png" type="Texture" id=39]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Idle (8).png" type="Texture" id=40]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (7).png" type="Texture" id=41]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (8).png" type="Texture" id=42]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (9).png" type="Texture" id=43]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (10).png" type="Texture" id=44]
[ext_resource path="res://Assets/Imgs/Enemies/Zombie Male/Walk (6).png" type="Texture" id=45]
[ext_resource path="res://Assets/Scripts/character/enemies/enemy_zombie male.gd" type="Script" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 39 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 29 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 13 ) ],
"loop": true,
"name": "attack1",
"speed": 4.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 26 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack1-2",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.0305
height = 59.9544

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 123.027, 4.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.17444, 8.29733 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.3927, 23.5776 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.65893, 4.37076 )

[node name="enemy_zombie male" type="KinematicBody2D"]
script = ExtResource( 46 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "idle"
frame = 11
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="player_detect_L" type="Area2D" parent="."]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect_L"]
position = Vector2( -155.13, -20.5198 )
shape = SubResource( 3 )
disabled = true

[node name="player_detect_R" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect_R"]
position = Vector2( 155.407, -18.9449 )
shape = SubResource( 3 )

[node name="action_R" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_R"]
position = Vector2( 22.3218, 6.41504 )
shape = SubResource( 4 )

[node name="action_L" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_L"]
position = Vector2( -25.536, 6.15227 )
shape = SubResource( 4 )

[node name="atk_area_R" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atk_area_R"]
position = Vector2( 21.0726, 21.6817 )
shape = SubResource( 5 )
disabled = true

[node name="atk_area_L" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atk_area_L"]
position = Vector2( -24.2088, 21.9581 )
shape = SubResource( 5 )
disabled = true

[node name="detect_gound_R" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_gound_R"]
position = Vector2( 20.5061, 52.6795 )
shape = SubResource( 6 )

[node name="detect_gound_L" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_gound_L"]
position = Vector2( -26.8701, 53.033 )
shape = SubResource( 6 )
disabled = true

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="player_detect_L" to="." method="_on_sensor_mata_L_body_entered"]
[connection signal="body_exited" from="player_detect_L" to="." method="_on_player_detect_L_body_exited"]
[connection signal="body_entered" from="player_detect_R" to="." method="_on_sensor_mata_R_body_entered"]
[connection signal="body_exited" from="player_detect_R" to="." method="_on_player_detect_R_body_exited"]
[connection signal="body_entered" from="action_R" to="." method="_on_action_R_body_entered"]
[connection signal="body_exited" from="action_R" to="." method="_on_action_R_body_exited"]
[connection signal="body_entered" from="action_L" to="." method="_on_action_L_body_entered"]
[connection signal="body_exited" from="action_L" to="." method="_on_action_L_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
